Edited CSS display

--- a/index.html
+++ b/index.html
@@ -28,24 +28,27 @@
         <input type="text" id="" placeholder="Height"> </form>
     <button type="button">submit</button>
     <br><br>
-    <div id="shapeContainer"></div>
+
+    <div id="container">
+        <div id="shapeContainer"></div>
 
 
-    <div id="information">
-        <h1>Info about the shape:</h1>
+        <div id="informationContainer">
+            <h1>Info about the shape:</h1>
 
-        <input type="text" name="shape" placeholder="Shape" id="shape" readonly>
-        <br> <br>
-        <input type="number" name="height" placeholder="Height" id="height" readonly>
-        <br> <br>
-        <input type="number" name="width" placeholder="Width" id="width" readonly>
-        <br> <br>
-        <input type="number" name="area" placeholder="Area" id="area" readonly>
-        <br> <br>
-        <input type="number" name="perimeter" placeholder="Perimeter" id="perimeter" readonly>
-        <br> <br>
-        <input type="number" name="radius" placeholder="Radius" id="radius" readonly>
-        <br>
+            <input type="text" name="shape" placeholder="Shape" id="shape" readonly>
+            <br> <br>
+            <input type="number" name="height" placeholder="Height" id="height" readonly>
+            <br> <br>
+            <input type="number" name="width" placeholder="Width" id="width" readonly>
+            <br> <br>
+            <input type="number" name="area" placeholder="Area" id="area" readonly>
+            <br> <br>
+            <input type="number" name="perimeter" placeholder="Perimeter" id="perimeter" readonly>
+            <br> <br>
+            <input type="number" name="radius" placeholder="Radius" id="radius" readonly>
+            <br>
+        </div>
     </div>
     </div>
 
