--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <form>Rectangle
         <input type="text" id="width" placeholder="Width"><label for="height"></label> <input type="text" id=""
             placeholder="Height"></form>
-    <button type="button">submit</button>
+    <button type="button" id="rectBtn">submit</button>
     <br><br>
     <form>Square
         <input type="text" id="" placeholder="Side Length"> </form>
-    <button type="button">submit</button>
+    <button type="button" id="squareBtn">submit</button>
     <br><br>
     <form>Circle
         <input type="text" id="" placeholder="Radius"> </form>
-    <button type="button">submit</button>
+    <button type="button" id="circleBtn">submit</button>
     <br><br>
     <form>Isosceles Right Triangle
         <input type="text" id="" placeholder="Height"> </form>
-    <button type="button">submit</button>
+    <button type="button" id="triangleBtn">submit</button>
     <br><br>
 
     <div id="container">
