Edited CSS, Added rectangle and square basic outlines

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Make a shape:</h1>
     <form>Rectangle
-        <input type="text" id="width" placeholder="Width"><label for="height"></label> <input type="text" id=""
+        <input type="text" id="rectwidth" placeholder="Width"><label for="rectheight"></label> <input type="text" id="height"
             placeholder="Height"></form>
     <button type="button" id="rectBtn">submit</button>
     <br><br>
