Added EventListener for buttons to create new shapes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <input type="number" placeholder="Height" id="rectHeight">
         <input type="button" value="shape up!" class="button" id="rectBtn">
     </form>
-
     <br><br>
+
     <form>Square
         <input type="number" placeholder="Side Length" id="squareSideLength">
         <input type="button" value="shape up!" class="button" id="squareBtn">
@@ -43,15 +43,15 @@
 
             <input type="text" name="shape" placeholder="Shape" id="shape" readonly>
             <br> <br>
-            <input type="number" name="height" placeholder="Height" id="height" readonly>
+            <input type="text" name="height" placeholder="Height" id="height" readonly>
             <br> <br>
-            <input type="number" name="width" placeholder="Width" id="width" readonly>
+            <input type="text" name="width" placeholder="Width" id="width" readonly>
             <br> <br>
-            <input type="number" name="area" placeholder="Area" id="area" readonly>
+            <input type="text" name="area" placeholder="Area" id="area" readonly>
             <br> <br>
-            <input type="number" name="perimeter" placeholder="Perimeter" id="perimeter" readonly>
+            <input type="text" name="perimeter" placeholder="Perimeter" id="perimeter" readonly>
             <br> <br>
-            <input type="number" name="radius" placeholder="Radius" id="radius" readonly>
+            <input type="text" name="radius" placeholder="Radius" id="radius" readonly>
             <br>
         </div>
     </div>
